# ATGQL

./: .pre-commit-config.yaml  .pylintrc  pyproject.toml  test.py
.github/workflows/: codeql-analysis.yml  post-commit.yml
atgql/: helpers.py  shims.py
atgql/language/: README.md  ast.py  block_string.py  directive_location.py  kinds.py  source.py  token_kind.py  visitor.py
atgql/pyutils/: README.md  dev_assert.py  did_you_mean.py  identity_func.py  inspect.py  inspect_.py  instance_of.py  invariant.py  is_async_iterable.py  is_iterable_object.py  is_object_like.py  is_promise.py  key_map.py  key_val_map.py  map_value.py  maybe.py  memoize3.py  natural_compare.py  obj_map.py  path.py  print_path_array.py  promise_for_object.py  promise_or_value.py  promise_reduce.py  suggestion_list.py  to_obj_map.py
tests/: shims_test.py
tests/language/: source_test.py
tests/pyutils/: did_you_mean_test.py  identity_func_test.py  instance_of_test.py  invariant_test.py  is_async_iterable_test.py  is_iterable_object_test.py  is_object_like_test.py  natural_compare_test.py  suggestion_list_test.py  to_obj_map_test.py
tests/shims/: array_test.py  typeof_test.py
