[tool.poetry]
name = "ATGQL"
version = "0.1.0"
description = "A Python port of graphql-js"
authors = ["iyanging <iyanging@163.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^3.10.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0"
pylint = "^2"
pre-commit = "^2"
commitizen = "^2"
pytest = "^6"
pytest-asyncio = "^0"
codecov = "^2"
pytest-cov = "^2"
black = "*"
isort = "*"
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true
exclude = '''
(
  /(
      \.git
    | \.venv
    | \.mypy_cache
    | __pycache__
  )
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "atgql/__init__.py:__version__"
]
tag_format = "v$version"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = false

disallow_any_unimported = true
disallow_subclassing_any = true

disallow_untyped_calls = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

show_error_codes = true

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: not covered",
  # ignore overload stubs
  "@overload",
]
